Fix small insight component layout issue

--- a/webportal/src/app/analysis/insight/insight.component.scss
+++ b/webportal/src/app/analysis/insight/insight.component.scss
@@ -22,5 +22,4 @@ h2 {
 .ant-avatar {
     float: left;
     margin-right: 15px;
-    margin-bottom: 25px;
 }
